--- a/packages/item-demand/src/components/skeleton/index.css
+++ b/packages/item-demand/src/components/skeleton/index.css
@@ -11,7 +11,7 @@
     opacity: 1;
   }
 }
-.mcui-skeleton{
-  background-color: rgba(0,0,0,0.11);
+.mcui-skeleton {
+  background-color: rgba(0, 0, 0, 0.11);
   animation: 1.5s ease-in-out infinite normal none running skeleton-pulse;
 }
